--- a/Dishes_2019/Dishes_2019.vcxproj
+++ b/Dishes_2019/Dishes_2019.vcxproj
@@ -140,10 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Dish.h" />
+    <ClInclude Include="MeatDish.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Dish.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MeatDish.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
