--- a/Dishes_2019/Dishes_2019.vcxproj.filters
+++ b/Dishes_2019/Dishes_2019.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="Dish.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MeatDish.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Dish.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MeatDish.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
