--- a/Dishes_2019/Dishes_2019.vcxproj
+++ b/Dishes_2019/Dishes_2019.vcxproj
@@ -141,11 +141,13 @@
   <ItemGroup>
     <ClInclude Include="Dish.h" />
     <ClInclude Include="MeatDish.h" />
+    <ClInclude Include="SeaFoodDish.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Dish.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MeatDish.cpp" />
+    <ClCompile Include="SeaFoodDish.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
