--- a/Dishes_2019/Dishes_2019.vcxproj.filters
+++ b/Dishes_2019/Dishes_2019.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="SeaFoodDish.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SurfAndTurf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Dish.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SeaFoodDish.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SurfAndTurf.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
